--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
