--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "-beam-app",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -11,6 +13,7 @@
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "stimulus": "^3.1.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
