--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animejs": "^3.2.1",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^2.10.0",
     "popper.js": "^1.16.1",
     "stimulus": "^3.1.0",
     "turbolinks": "^5.2.0",
